--- a/package.json
+++ b/package.json
@@ -49,11 +49,14 @@
     "babel-preset-stage-0": "^6.22.0",
     "babel-register": "^6.22.0",
     "babel-runtime": "^6.22.0",
+    "clipboard": "1.5.16",
     "css-loader": "^0.26.1",
+    "d3": "^4.10.0",
     "enzyme": "^2.7.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
     "gzip-size": "^3.0.0",
+    "happypack": "^3.0.2",
     "jsdom": "^9.9.1",
     "less": "^2.7.2",
     "less-loader": "^2.2.3",
@@ -63,9 +66,7 @@
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
     "webpack": "^2.2.0-rc.3",
-    "happypack": "^3.0.2",
     "webpack-dev-middleware": "^1.9.0",
-    "webpack-hot-middleware": "^2.15.0",
-    "clipboard": "1.5.16"
+    "webpack-hot-middleware": "^2.15.0"
   }
 }
